--- a/index.html
+++ b/index.html
@@ -7,110 +7,74 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e); color: white; min-height: 100vh; padding: 2rem; }
-    .card { background: rgba(30,30,60,0.8); border: 1px solid #6366f1; border-radius: 1rem; padding: 1.5rem; }
-    button { padding: 1rem 2rem; margin: 0.5rem; border-radius: 9999px; cursor: pointer; font-size: 1.1rem; }
+    button { padding: 1rem 2rem; margin: 1rem; border-radius: 9999px; cursor: pointer; font-size: 1.25rem; }
     #micBtn { background: #ef4444; color: white; }
     #uploadArea { border: 3px dashed #6366f1; padding: 3rem; margin: 2rem auto; max-width: 400px; border-radius: 1rem; cursor: pointer; }
     #uploadArea:hover { background: rgba(99,102,241,0.1); }
-    #gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1.5rem; }
-    .gallery-item { background: #1e1e3c; border-radius: 1rem; overflow: hidden; }
-    .gallery-item img, .gallery-item video { width: 100%; height: 200px; object-fit: cover; }
   </style>
 </head>
 <body>
-  <div class="max-w-5xl mx-auto">
-    <h1 class="text-5xl font-bold text-center mb-8 text-purple-300">Pictura Nexus</h1>
+  <div class="max-w-5xl mx-auto text-center">
+    <h1 class="text-5xl font-bold mb-8 text-purple-300">Pictura Nexus</h1>
 
-    <!-- Login -->
-    <div id="authForm" class="card max-w-md mx-auto">
-      <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
-      <input id="username" type="text" placeholder="Username" class="w-full p-3 mb-4 bg-gray-800 border border-gray-600 rounded-lg" />
-      <input id="password" type="password" placeholder="Password" class="w-full p-3 mb-6 bg-gray-800 border border-gray-600 rounded-lg" />
-      <button id="loginBtn" class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded-lg font-medium">Login</button>
-      <p id="authMessage" class="mt-4 text-center text-red-400"></p>
+    <div class="flex justify-center gap-8 mb-10">
+      <button id="micBtn">🎤 Speak Command</button>
+      <label id="uploadArea">
+        📤 Upload Photo or Video (max 50MB)
+        <input id="fileInput" type="file" accept="image/*,video/*" class="hidden" />
+      </label>
     </div>
 
-    <!-- Main Content -->
-    <div id="mainContent" style="display:none;">
-      <div class="flex justify-center gap-8 mb-10">
-        <button id="micBtn">🎤 Speak Command</button>
-        <label id="uploadArea" class="text-center">
-          📤 Upload Photo or Video (max 50MB)
-          <input id="fileInput" type="file" accept="image/*,video/*" class="hidden" />
-        </label>
-      </div>
-
-      <div id="gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-
-      <div class="mt-12 bg-black/40 p-6 rounded-xl max-h-64 overflow-y-auto text-sm font-mono" id="log">
-        Log started...
-      </div>
+    <div id="log" class="bg-black/40 p-6 rounded-xl max-h-64 overflow-y-auto text-sm font-mono text-left">
+      Log started...
     </div>
   </div>
 
   <script>
-    let currentUser = null;
-    let mediaItems = JSON.parse(localStorage.getItem('pictura_media')) || [];
-
-    function updateUI() {
-      document.getElementById('authForm').style.display = currentUser ? 'none' : 'block';
-      document.getElementById('mainContent').style.display = currentUser ? 'block' : 'none';
+    function log(msg) {
+      const logEl = document.getElementById('log');
+      logEl.innerHTML += '<div>' + msg + '</div>';
+      logEl.scrollTop = logEl.scrollHeight;
+      console.log(msg);   // also show in browser console
     }
 
-    document.getElementById('loginBtn').onclick = () => {
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-      if (username === 'admin' && password === 'nick1') {
-        currentUser = 'admin';
-        localStorage.setItem('pictura_currentUser', 'admin');
-        updateUI();
-      } else {
-        alert('Use admin / nick1');
+    // MIC BUTTON
+    document.getElementById('micBtn').onclick = () => {
+      log('✅ Speak Command button clicked!');
+      alert('Speak Command button works! Now trying voice recognition...');
+
+      if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
+        log('SpeechRecognition not supported in this browser');
+        alert('Voice not supported in this browser. Try Chrome or Edge.');
+        return;
       }
+
+      const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = 'en-US';
+      recognition.onresult = (event) => {
+        const text = event.results[0][0].transcript;
+        log('Heard: ' + text);
+        alert('You said: ' + text);
+      };
+      recognition.onerror = (e) => {
+        log('Voice error: ' + e.error);
+        alert('Voice error: ' + e.error);
+      };
+      recognition.start();
+      log('Listening started...');
     };
 
+    // UPLOAD (already working for you)
     document.getElementById('uploadArea').onclick = () => {
       document.getElementById('fileInput').click();
     };
 
     document.getElementById('fileInput').onchange = (e) => {
       const file = e.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = (ev) => {
-          mediaItems.push({ name: file.name, type: file.type, url: ev.target.result });
-          localStorage.setItem('pictura_media', JSON.stringify(mediaItems));
-          renderGallery();
-        };
-        reader.readAsDataURL(file);
-      }
+      if (file) log('Uploaded: ' + file.name);
     };
 
-    function renderGallery() {
-      const g = document.getElementById('gallery');
-      g.innerHTML = '';
-      mediaItems.forEach(item => {
-        const div = document.createElement('div');
-        div.className = 'gallery-item';
-        if (item.type.startsWith('image')) {
-          div.innerHTML = `<img src="${item.url}" class="w-full h-48 object-cover" />`;
-        } else {
-          div.innerHTML = `<video src="${item.url}" controls class="w-full h-48 object-cover"></video>`;
-        }
-        const name = document.createElement('p');
-        name.className = 'p-2 text-center';
-        name.textContent = item.name;
-        div.appendChild(name);
-        g.appendChild(div);
-      });
-    }
-
-    // Init
-    if (localStorage.getItem('pictura_currentUser') === 'admin') {
-      currentUser = 'admin';
-    }
-    updateUI();
-    renderGallery();
+    log('Page loaded - click Speak Command to test');
   </script>
 </body>
 </html>
