--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e); color: white; min-height: 100vh; }
-    .upload-area { border: 3px dashed #6366f1; border-radius: 1rem; transition: all 0.3s; cursor: pointer; }
+    .upload-area { border: 3px dashed #6366f1; border-radius: 1rem; transition: all 0.3s; }
     .upload-area:hover { border-color: #a5b4fc; background: rgba(99,102,241,0.08); }
     .card { background: rgba(30,30,60,0.75); backdrop-filter: blur(10px); border: 1px solid rgba(165,180,252,0.25); border-radius: 1rem; overflow: hidden; transition: all 0.3s; }
     .card:hover { transform: translateY(-4px); box-shadow: 0 10px 30px rgba(99,102,241,0.25); }
@@ -38,7 +38,7 @@
 
     <!-- Main Content -->
     <div id="mainContent" style="display:none;">
-      <div class="flex justify-center gap-8 mb-12">
+      <div class="flex justify-center gap-8 mb-10">
         <button id="micBtn" class="mic-btn px-12 py-6 bg-red-600 hover:bg-red-700 text-xl font-medium flex items-center gap-3">
           🎤 Speak Command
         </button>
