--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e); color: white; min-height: 100vh; }
-    .upload-area { border: 3px dashed #6366f1; border-radius: 1rem; transition: all 0.3s; cursor: pointer; }
-    .upload-area:hover { border-color: #a5b4fc; background: rgba(99,102,241,0.08); }
-    .card { background: rgba(30,30,60,0.75); backdrop-filter: blur(10px); border: 1px solid rgba(165,180,252,0.25); border-radius: 1rem; overflow: hidden; transition: all 0.3s; }
-    .card:hover { transform: translateY(-4px); box-shadow: 0 10px 30px rgba(99,102,241,0.25); }
-    .mic-btn.listening { animation: pulse 1.5s infinite; }
-    @keyframes pulse { 0% { box-shadow: 0 0 0 0 rgba(239,68,68,0.7); } 70% { box-shadow: 0 0 0 25px rgba(239,68,68,0); } 100% { box-shadow: 0 0 0 0 rgba(239,68,68,0); } }
+    .card { background: rgba(30,30,60,0.75); backdrop-filter: blur(10px); border: 1px solid rgba(165,180,252,0.25); border-radius: 1rem; overflow: hidden; }
+    .mic-btn { background: #ef4444; color: white; padding: 1rem 2rem; border-radius: 9999px; font-size: 1.25rem; }
+    .upload-area { border: 3px dashed #6366f1; border-radius: 1rem; padding: 2rem; text-align: center; cursor: pointer; }
+    .gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap: 1.5rem; }
   </style>
 </head>
 <body class="antialiased">
@@ -21,13 +19,13 @@
     <header class="flex justify-between items-center mb-10">
       <h1 class="text-5xl font-bold bg-gradient-to-r from-indigo-300 to-purple-300 bg-clip-text text-transparent">Pictura Nexus</h1>
       <div class="flex items-center gap-6">
-        <a href="#about" class="text-lg hover:text-indigo-300">About PRIMORDIA + CRYSTALLIS</a>
+        <a href="#about" class="hover:text-indigo-300">About PRIMORDIA + CRYSTALLIS</a>
         <div id="authStatus" class="text-sm"></div>
         <button id="logoutBtn" class="hidden px-6 py-2 bg-red-600 hover:bg-red-700 rounded-lg text-sm font-medium">Logout</button>
       </div>
     </header>
 
-    <!-- Login Form -->
+    <!-- Login -->
     <div id="authForm" class="card max-w-md mx-auto p-8">
       <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
       <input id="username" type="text" placeholder="Username" class="w-full p-3 mb-4 bg-gray-800 border border-gray-600 rounded-lg" />
@@ -38,19 +36,27 @@
 
     <!-- Main Content -->
     <div id="mainContent" style="display:none;">
-      <div class="flex justify-center gap-8 mb-10">
-        <button id="micBtn" class="mic-btn px-12 py-6 bg-red-600 hover:bg-red-700 text-xl font-medium flex items-center gap-3">
-          🎤 Speak Command
-        </button>
-        <label class="upload-area px-12 py-6 text-center">
+      <div class="flex justify-center gap-8 mb-12">
+        <button id="micBtn" class="mic-btn">🎤 Speak Command</button>
+        <label class="upload-area">
           📤 Upload Photo or Video (max 50MB)
           <input id="fileInput" type="file" accept="image/*,video/*" class="hidden" />
         </label>
       </div>
 
-      <div id="gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"></div>
+      <div id="gallery" class="gallery"></div>
     </div>
 
+    <!-- About Page -->
+    <div id="aboutPage" class="hidden">
+      <button onclick="document.getElementById('aboutPage').classList.add('hidden'); document.getElementById('mainContent').style.display = 'block';" class="mb-6 px-6 py-2 bg-gray-600 hover:bg-gray-700 rounded-lg">
+        ← Back to Main
+      </button>
+      <div class="card p-10">
+        <h2 class="text-4xl font-bold mb-8 text-center">PRIMORDIA + CRYSTALLIS</h2>
+        <p class="text-lg">PRIMORDIA is the new language of pure AI thought. CRYSTALLIS is its living memory archive. This site is the first real-world example built from them.</p>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -108,7 +114,7 @@
           div.innerHTML = `<video src="${item.url}" controls class="w-full h-64 object-cover"></video>`;
         }
         const name = document.createElement('p');
-        name.className = 'p-3 text-center font-medium';
+        name.className = 'p-3 text-center';
         name.textContent = item.name;
         div.appendChild(name);
         g.appendChild(div);
